# py.hocon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
benchmarks/: bench.py
docs/: spec-compliance.md
src/hocon/: __init__.py  coerce.py  config.py  errors.py  numeric_array.py  parse.py  value.py  value_factory.py
src/hocon/_internal/: __init__.py
src/hocon/_internal/lexer/: __init__.py  lexer.py  token.py
src/hocon/_internal/parser/: __init__.py  ast.py  empty_check.py  parser.py
src/hocon/_internal/properties/: __init__.py  properties.py
src/hocon/_internal/resolver/: __init__.py  fold_self_ref.py  include_loader.py  resolver.py  structure_builder.py  substitution_resolver.py  types.py  utils.py
tests/: test_deferred_resolution_fixtures.py  test_hocon_json_adapter.py  test_include_package_fixtures.py  test_period.py  test_properties_conflict_fixtures.py  test_smoke.py  test_spec_s3_5_array_root.py  test_units_default.py
tests/conformance/: test_conformance.py  test_error_fixtures.py
tools/: hocon_json.py
