[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hocon-parser"
# Snapshot version; the release workflow sets the real version from the git tag
# (same convention as the sibling implementations).
version = "0.0.0"
description = "Full Lightbend HOCON specification-compliant parser for Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "1o1 Co. Ltd." }]
keywords = ["hocon", "config", "configuration", "parser"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/o3co/py.hocon"
Issues = "https://github.com/o3co/py.hocon/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hocon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# SIM102/SIM103 would collapse the guard-chain predicates that mirror ts.hocon's
# structure 1:1 (lexer/coerce whitespace tables, parser scalar-type detection);
# keeping the ported shape is worth more than the one-liner form here.
ignore = ["SIM102", "SIM103"]
